--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
         "test": "make test"
     },
     "dependencies": {
-        "alexa-app-server": "3.0.0"
+        "alexa-app-server": "3.0.2"
     },
     "devDependencies": {
-        "mocha": "3.1.2",
         "chai": "3.5.0",
-        "chai-http": "3.0.0",
-        "chai-string": "1.3.0"
+        "chai-http": "^4.2.0",
+        "chai-string": "1.3.0",
+        "mocha": "^3.1.2"
     }
 }
