--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
         "test": "make test"
     },
     "dependencies": {
-        "alexa-app-server": "3.0.2"
+        "alexa-app-server": "3.0.2",
+        "wtfnode": "^0.8.0"
     },
     "devDependencies": {
         "chai": "3.5.0",
         "chai-http": "^4.2.0",
         "chai-string": "1.3.0",
-        "mocha": "^3.1.2"
+        "mocha": "^5.2.0"
     }
 }
