--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "test": "make test"
     },
     "dependencies": {
-        "alexa-app-server": "3.0.2",
-        "wtfnode": "^0.8.0"
+        "alexa-app-server": "3.0.2"
     },
     "devDependencies": {
         "chai": "3.5.0",
