--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "private": true,
     "engines": {
-        "node": "4.3.x",
+        "node": "10.0.0",
         "npm": "4.x.x"
     },
     "scripts": {
